--- a/auth/src/main/main/resources/application.properties
+++ b/auth/src/main/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=ISC-API
+spring.application.name=inventory
 
 spring.config.import=optional:file:.env[.properties]
 spring.devtools.add-properties=true
 
 server.servlet.context-path=/api
-server.port=9090
+server.port=8081
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
@@ -20,6 +20,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=create-drop
 
-rest.config.read_timeout=5000
-rest.config.connect_timeout=5000
-rest.config.baseUrl=https://servicioscalt.andinave.com:9068/
+
