--- a/auth/.gitignore
+++ b/auth/.gitignore
@@ -1,6 +1,7 @@
 # Directorios de compilación y target de Maven/Gradle
 /target/
 /build/
+/bin/
 
 # Archivos de configuración y metadata de Eclipse
 /.classpath
