--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/ISC-DB}
-spring.datasource.username=${DB_USER:ISC-ADMIN}
-spring.datasource.password=${DB_PASSWORD:ISC-PASSWORD}
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.wolgpgjtmzvzdrnzpoms
+spring.datasource.password=J27660574esus
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
