cambios varios y de rendimiento

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.config.import=optional:file:.env[.properties]
 spring.devtools.add-properties=true
 
 server.port=9090
-#server.address=0.0.0.0
+server.address=0.0.0.0
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
