--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -104,6 +104,10 @@
 			<plugin>
 				<groupId>io.github.git-commit-id</groupId>
 				<artifactId>git-commit-id-maven-plugin</artifactId>
+				<version>9.0.1</version>
+				<configuration>
+					<skip>${git.commit.id.skip}</skip>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
