--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,6 +12,12 @@
 	<artifactId>api</artifactId>
 	<packaging>jar</packaging>
 
+
+	<properties>
+		<git.commit.id.skip>true</git.commit.id.skip>
+	</properties>
+	
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
