--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.wolgpgjtmzvzdrnzpoms
-spring.datasource.password=J81994808esus
+spring.datasource.url=jdbc:postgresql://dpg-d115e915pdvs73ekaapg-a.oregon-postgres.render.com:5432/expenses_zbiu
+spring.datasource.username=siaft
+spring.datasource.password=a5znl3ZoZHJzFyU3Jg0s11Q08UG4sRvr
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
