--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://dpg-d115e915pdvs73ekaapg-a.oregon-postgres.render.com:5432/expenses_zbiu
-spring.datasource.username=siaft
-spring.datasource.password=a5znl3ZoZHJzFyU3Jg0s11Q08UG4sRvr
+spring.datasource.url=jdbc:postgresql://dpg-d1lsucidbo4c73aasl10-a.oregon-postgres.render.com:5432/isc_inventory
+spring.datasource.username=inventory
+spring.datasource.password=pAxREoN6EW59Jn9yMPmTd2FX57giwr8D
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
@@ -36,3 +36,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/api/v1/docs/index.html
+
+#email
+email.username=soporte@integritysolutions.com.ec
+email.password=Integrity2025*
