--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -36,3 +36,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/api/v1/docs/index.html
+
+#email
+email.username=soporte@integritysolutions.com.ec
+email.password=Integrity2025*
