--- a/api/pom.xml
+++ b/api/pom.xml
@@ -125,16 +125,18 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-    <plugins>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <configuration>
-                <mainClass>com.isc.api.ApiApplication</mainClass>
-            </configuration>
-        </plugin>
-    </plugins>
+<build>
+  <plugins>
+    <!-- EXISTENTE -->
+    <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+      <configuration>
+        <mainClass>com.isc.api.ApiApplication</mainClass>
+      </configuration>
+    </plugin>
+  </plugins>
 </build>
+
 
 </project>
