--- a/api/dockerfile
+++ b/api/dockerfile
@@ -10,4 +10,4 @@ WORKDIR /app
 COPY --from=build /app/api/target/api-*.jar app.jar
 
 EXPOSE 9090
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Djava.awt.headless=true", "-jar", "app.jar"]
