--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -38,4 +38,4 @@ springdoc.swagger-ui.path=/api/v1/docs/index.html
 
 #email
 email.username=soporte@integritysolutions.com.ec
-email.password=Integrity2025*
+email.password=sdsntcgbcpnjkklp
