--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -33,3 +33,6 @@ springdoc.swagger-ui.path=/api/v1/docs/index.html
 # email
 email.username=${EMAIL_USERNAME:siaft@siaft.net}
 email.password=${EMAIL_PASSWORD:Vrocoli23_}
+
+# server name
+frontend:https://app.inventory.integritysolutions.com.ec/
