--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://dpg-d1lsucidbo4c73aasl10-a.oregon-postgres.render.com:5432/isc_inventory
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://147.93.181.146:5432/isc_inventory}
 spring.datasource.username=inventory
-spring.datasource.password=pAxREoN6EW59Jn9yMPmTd2FX57giwr8D
+spring.datasource.password=Zp8#kV42wLp@tR3m
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
