--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -35,4 +35,4 @@ email.username=${EMAIL_USERNAME:siaft@siaft.net}
 email.password=${EMAIL_PASSWORD:Vrocoli23_}
 
 # server name
-frontend:https://app.inventory.integritysolutions.com.ec/
+frontend:https://app.inventory.integritysolutions.com.ec
