--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -29,6 +29,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/api/v1/docs/index.html
+springdoc.swagger-ui.urls[0].url=/api/v1
 
 # email
 email.username=${EMAIL_USERNAME:siaft@siaft.net}
