cambios para ambiente de desa

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -9,10 +9,10 @@ server.port=${SERVER_PORT:8080}
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-## PostgreSQL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://147.93.181.146:5432/isc_inventory}
-spring.datasource.username=inventory
-spring.datasource.password=Zp8#kV42wLp@tR3m
+## PostgreSQL - valores por defecto (localhost)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/isc_inventory}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:inventory}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
@@ -37,4 +37,4 @@ email.username=${EMAIL_USERNAME:siaft@siaft.net}
 email.password=${EMAIL_PASSWORD:Vrocoli23_}
 
 # server name
-frontend:https://app.inventory.integritysolutions.com.ec
+frontend.url=${FRONTEND_URL:https://app.inventory.integritysolutions.com.ec/}
