--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -10,10 +10,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://147.93.181.146:5432/isc_inventory}
-spring.datasource.username=inventory
-spring.datasource.password=Zp8#kV42wLp@tR3m
-
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/isc_inventory}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:inventory}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
@@ -39,4 +38,4 @@ email.username=${EMAIL_USERNAME:siaft@siaft.net}
 email.password=${EMAIL_PASSWORD:Vrocoli23_}
 
 # server name
-frontend:https://app.inventory.integritysolutions.com.ec/
+frontend.url=${FRONTEND_URL:https://app.inventory.integritysolutions.com.ec/}
