--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,16 +3,16 @@ spring.application.name=ISC-API
 spring.config.import=optional:file:.env[.properties]
 spring.devtools.add-properties=true
 
-server.port=${SERVER_PORT:8080}
+server.port=${SERVER_PORT:9090}
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL - valores por defecto (localhost)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/isc_inventory}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://147.93.181.146:5432/isc_inventory_dev}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:inventory}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Zp8#kV42wLp@tR3m}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
