--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "9091:8080"
     restart: always
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory_develop
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory_dev
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp8#kV42wLp@tR3m
       - SERVER_PORT=8080
@@ -75,7 +75,7 @@ services:
       - "9090:8080"
     restart: always
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory_develop
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory_dev
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp8#kV42wLp@tR3m
       - SERVER_PORT=8080
