--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -38,4 +38,4 @@ email.username=${EMAIL_USERNAME:siaft@siaft.net}
 email.password=${EMAIL_PASSWORD:Vrocoli23_}
 
 # server name
-frontend.url=${FRONTEND_URL:http://localhost:4200/}
+frontend.url=${FRONTEND_URL:https://app.inventory.integritysolutions.com.ec/}
