--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<git.commit.id.skip>true</git.commit.id.skip>
+		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 	
 	
@@ -67,7 +68,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.7</version>
+			<version>2.8.12</version>
 		</dependency>
 
 		<dependency>
@@ -123,7 +124,28 @@
 		  <artifactId>batik-transcoder</artifactId>
 		  <version>1.16</version> <!-- O la última estable -->
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+	    	<groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>		
 	</dependencies>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 <build>
   <plugins>
