se agrego /invenvtory a los enrutamientos para mejor referenciacion

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ISC-API
+spring.application.name=ISC-API-INVENTORY
 
 spring.config.import=optional:file:.env[.properties], optional:configserver:
 spring.devtools.add-properties=true
@@ -27,10 +27,11 @@ jwt.resetPasswordExpiration=${JWT_RESET_EXPIRATION:180000}
 # swagger
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/api/v1/docs/index.html
+springdoc.swagger-ui.path=/api/v1/docs/swagger-ui/index.html
+springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.urls[0].name=Inventory AUTH
-springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].url=/api/v3/api-docs
+
 
 #eureka url
 eureka.url=${EUREKA_URL:http://localhost:8761/eureka/}
