--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,6 +13,7 @@
 	<packaging>jar</packaging>
 
 
+
 	<properties>
 		<git.commit.id.skip>true</git.commit.id.skip>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
@@ -52,6 +53,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+<dependency>
+   			 <groupId>org.springframework.cloud</groupId>
+    		 <artifactId>spring-cloud-starter-gateway-server-webflux</artifactId>
 		</dependency>
 
 		<dependency>
