--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,13 @@ name: Deploy Spring Boot Apps to VPS
 on:
   push:
     branches:
+      - main
       - develop
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -23,10 +25,15 @@ jobs:
         run: |
           rsync -avz --exclude '.git' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ secrets.VPS_DEPLOY_PATH }}
 
-      - name: Deploy Docker containers
+      - name: Deploy on VPS
         run: |
           ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
             cd ${{ secrets.VPS_DEPLOY_PATH }}
-            docker compose down || true
-            docker compose up -d --build
+            if [ "${GITHUB_REF##*/}" = "main" ]; then
+              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml down || true
+              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml up -d --build
+            elif [ "${GITHUB_REF##*/}" = "develop" ]; then
+              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml down || true
+              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml up -d --build
+            fi
           EOF
