--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=ISC-API
 
-spring.config.import=optional:file:.env[.properties], optional:configserver:
-spring.devtools.add-properties=true
+spring.config.import=optional:file:.env[.properties]
 
 server.port=${SERVER_PORT:9090}
 
@@ -31,12 +30,6 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/api/v1/docs/index.html
 springdoc.swagger-ui.urls[0].name=Inventory AUTH
 springdoc.swagger-ui.urls[0].url=/v3/api-docs
-
-#eureka url
-eureka.url=${EUREKA_URL:http://localhost:8761/eureka/}
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-eureka.client.service-url.default-zone= ${eureka.url}
-
 
 # email
 email.username=${EMAIL_USERNAME:siaft@siaft.net}
