--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ISC-API
 
 spring.config.import=optional:file:.env[.properties]
+spring.devtools.add-properties=true
 
 server.port=${SERVER_PORT:9090}
 
