--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,12 @@ jobs:
           ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
             cd ${{ secrets.VPS_DEPLOY_PATH }}
             if [ "${GITHUB_REF##*/}" = "main" ]; then
-              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml down || true
-              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml up -d --build
+              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml down -v || true
+              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml build --no-cache
+              docker compose -f docker-compose.base.yml -f docker-compose.prod.yml up -d
             elif [ "${GITHUB_REF##*/}" = "develop" ]; then
-              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml down || true
-              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml up -d --build
+              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml down -v || true
+              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml build --no-cache
+              docker compose -f docker-compose.base.yml -f docker-compose.dev.yml up -d
             fi
           EOF
