--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: api/Dockerfile
-    image: backend-api-prod
+    image: backend-inv-api-prod
     container_name: backend-api-prod
     ports:
       - "8081:8080"
@@ -23,7 +23,7 @@ services:
     build:
       context: .
       dockerfile: auth/Dockerfile
-    image: backend-auth-prod
+    image: backend-inv-auth-prod
     container_name: backend-auth-prod
     ports:
       - "8080:8080"
