Fix branch name handling in deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,14 +27,20 @@ jobs:
 
       - name: Deploy on VPS
         run: |
-          ssh -tt ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << "EOF"
-          set -ex
+          BRANCH_NAME=${GITHUB_REF##*/}
+          echo "Desplegando rama: $BRANCH_NAME"
+          ssh -tt ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << EOF
+            set -ex
             cd ${{ secrets.VPS_DEPLOY_PATH }}
-            if [ "${GITHUB_REF##*/}" = "main" ]; then
+            if [ "$BRANCH_NAME" = "main" ]; then
+              echo "🚀 Desplegando entorno de producción..."
               docker compose -f docker-compose.base.yml -f docker-compose.prod.yml down || true
               docker compose -f docker-compose.base.yml -f docker-compose.prod.yml up -d --build
-            elif [ "${GITHUB_REF##*/}" = "develop" ]; then
+            elif [ "$BRANCH_NAME" = "develop" ]; then
+              echo "🚀 Desplegando entorno de desarrollo..."
               docker compose -f docker-compose.base.yml -f docker-compose.dev.yml down || true
               docker compose -f docker-compose.base.yml -f docker-compose.dev.yml up -d --build
+            else
+              echo "⚠️ Rama $BRANCH_NAME no reconocida, no se desplegará nada."
             fi
           EOF
