Modify SSH command in deploy workflow
Updated SSH command to remove the '-tt' option for deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,7 @@ jobs:
         run: |
           BRANCH_NAME=${GITHUB_REF##*/}
           echo "Desplegando rama: $BRANCH_NAME"
-          ssh -tt ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << EOF
-            set -ex
+          ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << EOF
             cd ${{ secrets.VPS_DEPLOY_PATH }}
             if [ "$BRANCH_NAME" = "main" ]; then
               echo "🚀 Desplegando entorno de producción..."
