--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp8#kV42wLp@tR3m
       - FRONTEND_URL=http://147.93.181.147:8081/
+      - SERVER_PORT=8080
     depends_on:
       - postgres
     networks:
@@ -32,6 +33,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp8#kV42wLp@tR3m
       - FRONTEND_URL=http://147.93.181.147:8081/
+      - SERVER_PORT=8080
     depends_on:
       - postgres
     networks:
