--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp8#kV42wLp@tR3m
       - FRONTEND_URL=https://app.inventory.integritysolutions.com.ec/
+      - SERVER_PORT=8080
     depends_on:
       - postgres
     networks:
@@ -32,6 +33,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp8#kV42wLp@tR3m
       - FRONTEND_URL=https://app.inventory.integritysolutions.com.ec/
+      - SERVER_PORT=8080
     depends_on:
       - postgres
     networks:
