--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -6,8 +6,8 @@ services:
     container_name: backend-postgres
     restart: always
     environment:
-      POSTGRES_USER: inventory
-      POSTGRES_PASSWORD: Zp8#kV42wLp@tR3m
+      POSTGRES_USER: app_backend
+      POSTGRES_PASSWORD: I@iventory##12345
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
