--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.hikari.maximumPoolSize=5
 ## PostgreSQL
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://147.93.181.146:5432/isc_inventory_dev}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:inventory}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Zp8#kV42wLp@tR3m}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Zp15#kV42wLp@yR6m}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
