Correcion en credenciales de BD del docker

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -6,8 +6,8 @@ services:
     container_name: backend-postgres
     restart: always
     environment:
-      POSTGRES_USER: app_backend
-      POSTGRES_PASSWORD: I@iventory##12345
+      POSTGRES_USER: inventory
+      POSTGRES_PASSWORD: Zp15#kV42wLp@yR6m
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
