--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,8 +11,8 @@ services:
       - "8081:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory
-      - SPRING_DATASOURCE_USERNAME=app_backend
-      - SPRING_DATASOURCE_PASSWORD=I@iventory##12345
+      - SPRING_DATASOURCE_USERNAME=inventory
+      - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=https://app.inventory.integritysolutions.com.ec/
       - SERVER_PORT=8080
     depends_on:
@@ -30,8 +30,8 @@ services:
       - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory
-      - SPRING_DATASOURCE_USERNAME=app_backend
-      - SPRING_DATASOURCE_PASSWORD=I@iventory##12345
+      - SPRING_DATASOURCE_USERNAME=inventory
+      - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=https://app.inventory.integritysolutions.com.ec/
       - SERVER_PORT=8080
     depends_on:
