ajustes al compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -37,4 +37,7 @@ services:
     depends_on:
       - postgres
     networks:
-      - backend-net
+      backend-net:
+        external: true
+        name: app_backend-net
+
