--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "9091:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://backend-postgres:5432/isc_inventory_dev
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://147.93.181.146:5432/isc_inventory_dev
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=http://147.93.181.147:8081/
@@ -29,7 +29,7 @@ services:
     ports:
       - "9090:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://backend-postgres:5432/isc_inventory_dev
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://147.93.181.146:5432/isc_inventory_dev
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=http://147.93.181.147:8081/
