--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8081:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://147.93.181.146:5432/isc_inventory
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=https://app.inventory.integritysolutions.com.ec/
@@ -29,7 +29,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/isc_inventory
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://147.93.181.146:5432/isc_inventory
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=https://app.inventory.integritysolutions.com.ec/
