--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   api-dev:
@@ -20,22 +19,20 @@ services:
     networks:
       - backend-net
 
-  auth-dev:
+  isc-inv-auth:
     build:
       context: .
       dockerfile: auth/Dockerfile
-    image: backend-inv-auth-dev
-    container_name: backend-auth-dev
-    ports:
-      - "9090:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://147.93.181.146:5432/isc_inventory_dev
-      - SPRING_DATASOURCE_USERNAME=inventory
-      - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://isc-inventory-postgres-dev-tpfjds:5432/isc-inventory-db
+      - SPRING_DATASOURCE_USERNAME=isc-inventory-admin
+      - SPRING_DATASOURCE_PASSWORD=isc-inventory-pass
       - FRONTEND_URL=http://147.93.181.147:8081/
       - SERVER_PORT=8080
-    depends_on:
-      - postgres
-    networks:
-      - backend-net
 
+    networks:
+      - dokploy-network
+
+networks:
+  dokploy-network:
+    external: true
