--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,23 +1,19 @@
 
 services:
-  api-dev:
+  isc-inv-api:
     build:
       context: .
       dockerfile: api/Dockerfile
     image: backend-inv-api-dev
     container_name: backend-api-dev
-    ports:
-      - "9091:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://147.93.181.146:5432/isc_inventory_dev
       - SPRING_DATASOURCE_USERNAME=inventory
       - SPRING_DATASOURCE_PASSWORD=Zp15#kV42wLp@yR6m
       - FRONTEND_URL=http://147.93.181.147:8081/
-      - SERVER_PORT=8080
-    depends_on:
-      - postgres
+      - SERVER_PORT=8090
     networks:
-      - backend-net
+      - dokploy-network
 
   isc-inv-auth:
     build:
@@ -30,8 +26,7 @@ services:
       - FRONTEND_URL=http://147.93.181.147:8081/
       - SERVER_PORT=8080
 
-    networks:
-      - dokploy-network
+
 
 networks:
   dokploy-network:
