--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -39,3 +39,6 @@ email.password=${EMAIL_PASSWORD:Vrocoli23_}
 
 # server name
 frontend.url=${FRONTEND_URL:https://app.inventory.integritysolutions.com.ec/}
+
+
+test.url=${TEST_URL:https://app.inventory.integritysolutions.com.ec/}
